# polymarket

./: .env.example  .gitignore  ARCHITECTURE.md  CODEX_HANDOFF.md  Makefile  README.md  ROADMAP.md  pyproject.toml
docs/: BASELINE.md  FUTURE_SYSTEM_LOCAL_OPERATOR_UI_RELEASE_INDEX.md  FUTURE_SYSTEM_OPERATOR_UI_LOCAL_RUNBOOK.md  OPERATOR_RUNBOOK.md  OPERATOR_VALIDATION.md  PHASE_14A_SCOPE_LOCK.md  PHASE_14B_IMPLEMENTATION_LOG.md  PHASE_14C_IMPLEMENTATION_LOG.md  PHASE_14D_IMPLEMENTATION_LOG.md  PHASE_14E_IMPLEMENTATION_LOG.md  PHASE_14F_IMPLEMENTATION_LOG.md  PHASE_14G_IMPLEMENTATION_LOG.md  PHASE_14H_IMPLEMENTATION_LOG.md  PHASE_14I_REPLAY_VARIANCE_NORMALIZATION.md  PHASE_14J_IMPLEMENTATION_LOG.md  PHASE_14K_IMPLEMENTATION_LOG.md  PHASE_14L_REPLAY_READINESS_REVIEW.md  PHASE_14M_FIRST_CANDIDATE_CLOSEOUT.md  PHASE_15A_CANDIDATE_2_SCOPE_LOCK.md  PHASE_15B_IMPLEMENTATION_LOG.md  PHASE_15C_IMPLEMENTATION_LOG.md  PHASE_15D_IMPLEMENTATION_LOG.md  PHASE_15E_IMPLEMENTATION_LOG.md  PHASE_15F_IMPLEMENTATION_LOG.md  PHASE_15G_CANDIDATE_2_READINESS_REVIEW.md  PHASE_15H_CANDIDATE_2_CLOSEOUT.md  PHASE_16A_CANDIDATE_3_SCOPE_LOCK.md  PHASE_16B_IMPLEMENTATION_LOG.md  PHASE_16C_IMPLEMENTATION_LOG.md  PHASE_16D_IMPLEMENTATION_LOG.md  PHASE_16E_CANDIDATE_3_READINESS_REVIEW.md  PHASE_16F_CANDIDATE_3_CLOSEOUT.md  PHASE_17A_CANDIDATE_4_SCOPE_LOCK.md  PHASE_17B_IMPLEMENTATION_LOG.md  PHASE_17C_CANDIDATE_4_READINESS_REVIEW.md  PHASE_17D_CANDIDATE_4_CLOSEOUT.md  PHASE_18A_CANDIDATE_5_SCOPE_LOCK.md  PHASE_18B_IMPLEMENTATION_LOG.md  PHASE_18C_CANDIDATE_5_READINESS_REVIEW.md  (+90 more)
(+336 files in other folders)
